--- a/scss/modules/_newsletter.scss
+++ b/scss/modules/_newsletter.scss
@@ -84,8 +84,19 @@
     & label{
         cursor: pointer;
     }
+
+    & a{
+        color:#333645;
+        &:hover{
+            text-decoration:underline;
+        }   
+    }
 }
 
+.btn-subscribe{
+    font-size: 1.05rem;
+    padding: 10px 18px;
+}
 
 
 
